misc improvements - cleaned up navbar by making menu item names shorter - condensed and punched up the about text on home page - fixed resizing and overflow issues in navbar/logo - animated carousel photo position move during browser resize

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -144,10 +144,9 @@
   background: #fff;
   padding: 0.625rem;
   margin-top: -1.25rem;
-  margin-left: auto;
-  margin-right:auto;
+  margin-left: 1rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
-  display:block;
+  transition: all 0.3s ease;
 }
 
 /* Tablet */
@@ -173,15 +172,10 @@
 /* Very small phones or zoomed-in browser (e.g. 320px–375px) */
 @media (max-width: 375px) {
   .oss-navbar-logo {
-    max-width: 8rem;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media (min-width: 1024px) {
-  .navbar__brand img {
-    margin-right: 6rem; /* Pushes logo away from dropdown area */
+    max-width: 6.5rem;
+    max-height: 2.5rem;
+    padding: 0.3rem;
+    margin-top: -0.5rem;
   }
 }
 
@@ -203,6 +197,15 @@
     margin-top: -6px;
   }
 }
+.navbar {
+  height: min-content;
+  transition: height 0.5s ease;
+}
+
+.theme-doc-sidebar-menu {
+  margin-top: 1rem;
+}
+
 /* Abhilash  Changes */
 .lead-container {
   display: flex;
